# hpc-maintenance

./: .env.local  .gitignore  README.md  gpus.py  pyproject.toml  requirements.txt
config/: approved_fault_codes.json  excluded_hosts.json
felix/: cli.py  common.py  config.py  events_common.py  mgmt_utils.py  models.py  orchestrator.py  reporting.py  slrum_utils.py
felix/phases/: discovery.py  drain.py  finalize.py
felix/tests/: test_oci_utils.py  test_oci_utils_integration.py  test_utils.py
hpc-maintenance/: .gitignore  README.md  gpus.py  pyproject.toml  pytest.ini  requirements.txt
hpc-maintenance/maintenancetool/: cli.py  common.py  config.py  oci_utils.py  orchestrator.py
hpc-maintenance/maintenancetool/phases/: discovery.py  drain.py  finalize.py  health.py
hpc-maintenance/maintenancetool/tests/: test_oci_utils_integration.py
logs/: events.jsonl
maintenancetool/: cli.py  config.py  eventlog.py  formatting.py  logging_util.py  mgmt_utils.py  models.py  oci_utils.py  orchestrator.py  reporting.py  slrum_utils.py  utils.py
maintenancetool/phases/: discovery.py  drain.py  health.py  maintenance.py
maintenancetool/tests/: test_oci_utils.py  test_utils.py
test/: file1.txt
